tests/expectations/compiler/tuple/type_fail.out
Error [ETYC0372117]: Expected type `u64` but type `bool` was found.
    --> compiler-test:4:34
     |
   4 |         let t: (bool, u64) = (a, b); // We should expect a bool, not a u64.
     |                                  ^
Error [ETYC0372117]: Expected type `bool` but type `u64` was found.
    --> compiler-test:6:22
     |
   6 |         return (t.0, t.1);
     |                      ^^^
